# stremio-shell-ng

./: Cargo.toml  README.md
src/stremio_app/: app.rs  constants.rs  mod.rs  splash.rs  window_helper.rs  window_settings.rs
src/stremio_app/stremio_player/: communication.rs  communication_tests.rs  player.rs
src/stremio_app/stremio_wevbiew/: wevbiew.rs
